fix: toSchemaList returns List<Schema> raw type to match Swagger Core API
Changed return type of toSchemaList from List<Schema<?>> to List<Schema>
(raw type), which is exactly what Schema#setOneOf/setAllOf/setAnyOf expect.
This eliminates the (List) cast in buildComposedSchema entirely, removing the
need for @SuppressWarnings({"unchecked","rawtypes"}) on that method.
The single remaining @SuppressWarnings("rawtypes") is scoped to toSchemaList
where the raw type is intentional and documented.